# goodtime

./: .gitignore  Makefile  README.md  audio.vala  goodtime.c  goodtime.glade  goodtime.vala  goodtime_vala.vala  meson.build  tk.thatlittlegit.goodtime.json
data/: meson.build  tk.thatlittlegit.goodtime.appdata.xml.in  tk.thatlittlegit.goodtime.desktop.in  tk.thatlittlegit.goodtime.gschema.xml
po/: POTFILES  meson.build
src/: alarm.vala  audio.vala  date-utils.vala  goodtime.gresource.xml  goodtime.vala  main.vala  meson.build  settings.ui  settings.vala  window.ui  window.vala
